--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ diesel             = { version = "1.1.1", features = ["postgres"]}
 r2d2               = "0.8.2"
 r2d2_postgres      = "0.14.0"
 r2d2-diesel        = "1.0.0"
+dotenv             = "0.11.0"
