--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ r2d2               = "0.8.2"
 r2d2_postgres      = "0.14.0"
 r2d2-diesel        = "1.0.0"
 dotenv             = "0.11.0"
+
+[dev-dependencies]
+serde_json         = "1.0.9"
