--- a/Rocket.toml
+++ b/Rocket.toml
@@ -5,7 +5,7 @@ workers = 2
 log     = "normal"
 limits  = { forms = 32768 }
 
-[prousction]
+[production]
 address = "0.0.0.0"
 port    = 80
 workers = 2
